--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>DevFolio - Developer Portfolio Template</title>
+        <title>Hana Afra - Portfolio</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="Free Website Template" name="keywords">
         <meta content="Free Website Template" name="description">
@@ -57,9 +57,7 @@
                                 <br>
                                 <br>
                                 <br>
-                                <br>
-                                <br>
-                                <br>
+                               
                                 <p>I'm</p>
                                 <h1>Hana Afra</h1>
                                 <h2></h2>
